--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,8 +7,8 @@
          convertNoticesToExceptions="true"
          convertWarningsToExceptions="true"
          processIsolation="false"
-         stopOnFailure="false"
-         syntaxCheck="false">
+         stopOnFailure="true"
+         syntaxCheck="true">
     <testsuites>
         <testsuite name="Omnipay Test Suite">
             <directory>./tests/</directory>
