--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,11 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "omnipay/common": "~2.0"
+        "omnipay/common": "3.0-beta.1",
+        "php-http/guzzle6-adapter": "^1.1"
     },
     "require-dev": {
-        "omnipay/tests": "~2.0"
+        "omnipay/tests": "3.0-beta.1"
     },
     "autoload": {
         "psr-4": { "Omnipay\\Midtrans\\" : "src/" }
