--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "omnipay/common": "3.0-beta.1",
+        "omnipay/common": "~3.0",
         "php-http/guzzle6-adapter": "^1.1"
     },
     "require-dev": {
-        "omnipay/tests": "3.0-beta.1"
+        "omnipay/tests": "~3.0"
     },
     "autoload": {
         "psr-4": { "Omnipay\\Midtrans\\" : "src/" }
